# DeepZero

./: Readme.md  app.py  main.ipynb  play_deepzero_with_human.py  play_four_with_mcts.py  play_tictoe_with_mcts.py  pyproject.toml  req.txt  train_deepzero_chess.py  train_deepzero_four.py  train_deepzero_heckers.py  train_deepzero_tictactoe.py
games/: checkers.py  chess.py  connectfour.py  tictactoe.py
models/: deepzero.py  mcts.py  resnet.py
