[project]
name = "deepzero"
version = "0.1.0"
description = ""
authors = [
    {name = "Qwest1204",email = "myPCwithUbuntu@gmail.com "}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "notebook (>=7.5.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
